--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/trouve-ton-artisan-test-3",
-            "baseHref": "/mon-site-angular/",
+            "baseHref": "/trouve-ton-artisan/",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
